kotlin.web.demo.test/testData/errors/errorsFromBackendJs.kt
fun foo() {
    val a = ""
    js(a)
}